Much more complete. Still skeletal, but most (if not all) links are live.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
   <meta name="keywords" content="">
   <meta name="description" content="">
   <meta name="author" content="">
+  <meta name="generator" content="Hand-crafted HTML + Jekyll">
   <link rel="Shortcut Icon" href="/static/favicon.ico">
   <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
   <link rel="stylesheet/less" type="text/css" href="/static/master.less">
@@ -22,20 +23,37 @@
         <ul>
           <li><a href="/people/james_pennebaker.html">James Pennebaker</a></li>
           <li><a href="/people/jeffrey_hancock.html">Jeffrey Hancock</a></li>
-          <li><a href="/people/joseph_frazee.html">David Beaver</a></li>
+          <li><a href="/people/david_beaver.html">David Beaver</a></li>
           <li><a href="/people/cindy_chung.html">Cindy Chung</a></li>
           <li><a href="/people/joseph_frazee.html">Joseph Frazee</a></li>
         </ul>
       </div>
-      <div class="section">
+      <div class="section naked">
+        <h3><a href="/publications.html">Publications</a></h3>
+      </div>
+      <div class="section naked">
+        <h3><a href="/research.html">Research</a></h3>
+      </div>
+      <div class="section naked">
+        <h3><a href="/development.html">Development</a></h3>
+      </div>
+      <div class="section" style="margin-top: 30px">
         <h3>Upcoming Talks</h3>
-        <ul>
+        <ul class="flat">
           <li>
-            <h4>Minerva Conference</h4>
+            <h4 style="margin-top: 0"><a href="http://minerva.dtic.mil/annual_conference.html">Minerva Conference</a></h4>
             <p class="speaker">Art Graesser and David Beaver</p>
-            <p class="date"></p>
+            <p class="date">September 15-16th, 2011</p>
           </li>
         </ul>
+      </div>
+      <div class="section" style="margin-top: 20px">
+        <h3>Search the site:</h3>
+        <div><input id="search_text" type="text" /></div>
+        <div style="margin: 10px 0;">
+          <input id="search_button" type="button" value="Search" />
+          <span style="font-size: 80%; font-style: italic; color: #AAA;">&nbsp; Powered by Google</span>
+        </div>
       </div>
     </div>
     <div id="content">
