--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,10 +6,10 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <meta name="generator" content="Hand-crafted HTML + Jekyll">
-  <link rel="Shortcut Icon" href="/static/favicon.ico">
-  <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
+  <link rel="Shortcut Icon" href="/favicon.ico">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <link rel="stylesheet/less" type="text/css" href="/static/master.less">
-  <script src="/static/less.js" type="text/javascript"></script>
+  <script type="text/javascript" src="/static/less.js"></script>
   <!--<link rel="stylesheet" href="/static/master.css" type="text/css" media="all" charset="utf-8">-->
   <script type="text/javascript" src="/static/jquery.js"></script> 
   <title>Modeling Discourse and Social Dynamics in Authoritarian Regimes</title>
