--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,9 +41,9 @@
         <h3>Upcoming Talks</h3>
         <ul class="flat">
           <li>
-            <h4 style="margin-top: 0"><a href="http://minerva.dtic.mil/annual_conference.html">Minerva Conference</a></h4>
-            <p class="speaker">Art Graesser and David Beaver</p>
-            <p class="date">September 15-16th, 2011</p>
+            <h4 style="margin-top: 0"><a href="http://minerva.dtic.mil/">2012 Minerva Meeting</a></h4>
+            <p class="speaker">David Beaver</p>
+            <p class="date">September 14th, 2012, in Arlington, Virginia</p>
           </li>
         </ul>
       </div>
@@ -65,7 +65,7 @@
   </div>
   <script type="text/javascript">
     function google() {
-      window.location = 'http://www.google.com/#&q=site:minerva.henrian.com+' + $('#search_text').val();
+      window.location = 'http://www.google.com/#&q=site:semantics.ling.utexas.edu+' + $('#search_text').val();
     }
     $(function() {
       $('#search_button').click(google);
